# sw-actors

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  SW-Actor.cpp  config.hpp  job.sh  makePairs.cpp  makePairs.hpp  multi.sh  readFasta.cpp  readFasta.hpp  single.sh  vcpkg.json
benchmarks/: README.md
benchmarks/Actor/: BRCA1-1.sh  BRCA1-10.sh  BRCA1-15.sh  BRCA1-20.sh  BRCA1-25.sh  BRCA1-30.sh  BRCA1-35.sh  BRCA1-40.sh  BRCA1-5.sh  BRCA2-1.sh  BRCA2-10.sh  BRCA2-15.sh  BRCA2-20.sh  BRCA2-25.sh  BRCA2-30.sh  BRCA2-35.sh  BRCA2-40.sh  BRCA2-5.sh  Heterogeneous-40.sh  Titin-40.sh
benchmarks/Actor-Multinode/: BRCA1-2-40.sh  BRCA1-2-80.sh  BRCA1-4-160.sh  BRCA1-4-40.sh  BRCA1-4-80.sh  BRCA2-2-40.sh  BRCA2-2-80.sh  BRCA2-4-160.sh  BRCA2-4-40.sh  BRCA2-4-80.sh
benchmarks/Parasail/: Parasail-BRCA1.sh  Parasail-Titin.sh  Parasail.sh
benchmarks/SWIPE/: SWIPE.sh
benchmarks/SeqAN/source/: CMakeLists.txt  SeqAN.cpp
dataset/: BRCA1.fasta  BRCA2.fasta
dependencies/: install_caf.sh
include/: alignerInfo.hpp  blockActor.hpp  clientActor.hpp  config.hpp  makePairs.hpp  managerActor.hpp  outputActor.hpp  pairActor.hpp  readFasta.hpp  serialActor.hpp
include/actors/: client_actor.hpp  output_actor.hpp  protocol.hpp  server_actor.hpp  type_ids.hpp  worker_actor.hpp
include/sw/: alignment.hpp  cigar.hpp  fasta.hpp  sequence.hpp  smith_waterman.hpp
src/: fasta.cpp  main.cpp  smith_waterman.cpp
src/actors/: blockActor.cpp  clientActor.cpp  client_actor.cpp  managerActor.cpp  outputActor.cpp  output_actor.cpp  pairActor.cpp  serialActor.cpp  server_actor.cpp  worker_actor.cpp
src/utils/: alignerInfo.cpp  makePairs.cpp  readFasta.cpp
